# Nav2_pyif_drl_vo

./: .gitignore  =1.21  README.md  colcon_build  pyproject.toml
install/: local_setup.sh  setup.sh
install/apf_python_example/share/apf_python_example/: package.sh  package.xml
install/cnn_msgs/share/cnn_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/drl_vo_controller/lib/drl_vo_controller/: controller
install/drl_vo_controller/share/drl_vo_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav2_pyif/include/nav2_pyif/: geo_msgs.hpp  nav2_pyif_utils.hpp  nav_msgs.hpp  python_interface.hpp  std_msgs.hpp
install/nav2_pyif/share/nav2_pyif/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/nav2_pyif_controller/include/nav2_pyif_controller/: nav2_pyif_controller.hpp
install/nav2_pyif_controller/share/nav2_pyif_controller/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  nav2_pyif_controller.xml  package.sh  package.xml
log/: latest_build
src/: param.yaml
src/nav2_pyif/apf_python_example/: params.yaml
src/nav2_pyif/apf_python_example/apf_python_example.egg-info/: SOURCES.txt
src/nav2_pyif/cnn_msgs/: CMakeLists.txt  package.xml
src/nav2_pyif/drl_vo_controller/: package.xml  setup.cfg  setup.py
src/nav2_pyif/drl_vo_controller/drl_vo_controller/: cnn_data_pub.py  (+6 more)
src/nav2_pyif/drl_vo_controller/drl_vo_controller.egg-info/: SOURCES.txt  top_level.txt
(+70 files in other folders)
