[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Nav2_pyif_drl_vo"
version = "0.1.0"
description = "A description of your project"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "stable-baselines3",
    "numpy==1.26",
    "torch",
    "pandas",
    "matplotlib"
]

